--- a/package.json
+++ b/package.json
@@ -14,5 +14,11 @@
     "core-js": "^3.15.1",
     "nuxt": "^2.15.7"
   },
+  "config": {
+    "nuxt": {
+      "host": "0.0.0.0",
+      "port": "3000"
+    }
+  },
   "devDependencies": {}
 }
